--- a/projetofinalhtml/contato.html
+++ b/projetofinalhtml/contato.html
@@ -23,7 +23,7 @@
 					<h2>Entre em contato</h2>
 
 			<p>
-				Malorum" por Cícero também são reproduzidas em sua forma original exata
+				Malorum" por Cícero tambem são reproduzidas em sua forma original exata
 			</p>
 
 			<hr>
